# food-game-fullstack

./: README.md
backend/: Cargo.toml  README.md
backend/src/: app.rs  main.rs
backend/src/auth/: backend.rs  mod.rs  types.rs
backend/src/gameplay/: mod.rs
backend/src/gameplay/data/: crop.rs  item.rs  mod.rs  recipe.rs
backend/src/gameplay/functions/: craft.rs  forage.rs  mod.rs  sell.rs
backend/src/gameplay/models/: farm.rs  mod.rs  player.rs  server.rs
backend/src/models/: mod.rs  player.rs  server.rs
backend/src/routes/: auth.rs  gameplay.rs  mod.rs  user.rs
backend/src/tests/: auth_tests.rs  craft_tests.rs  forage_tests.rs  mod.rs  user_tests.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Header.jsx  SignInForm.jsx  SignUpForm.jsx
frontend/src/pages/: DashboardPage.jsx  LandingPage.jsx  SignInPage.jsx  SignUpPage.jsx
