[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-login = "0.17.0"
rand = "0.9.1"
rand_08 = { package = "rand", version = "0.8.0" }
rand_core = { version = "0.9.3", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
axum-test = "17.3.0"
